@@ -107,6 +107,7 @@ production.
 * Do not try to group together a page creation and edit in the RSS feed of RC.
 * (bug 29342) Patrol preferences shouldn't be visible to users who don't have
   patrol permissions
+* (bug 29471) Exception thrown for files with invalid date in metadata
 
 === API changes in 1.19 ===
 * BREAKING CHANGE: action=watch now requires POST and token.
